add ~80%unit test coverage for backend and add some frontend updates for fx func